[project]
name = "milvus-project-helper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "graelo", email = "graelo@graelo.cc" }
]
dependencies = [
    "typer>=0.12.5",
    "pymilvus>=2.4.9",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/milvus_project_helper"]

[project.scripts]
milvus-project = "milvus_project_helper.cli:app"
