[project]
name = "milvus-project-helper"
version = "0.1.1"
description = "Help create Milvus database, role and user"
authors = [
    { name = "graelo", email = "graelo@graelo.cc" }
]
dependencies = [
    "typer>=0.12.5",
    "pymilvus>=2.4.9",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/milvus_project_helper"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[project.scripts]
milvus-project-helper = "milvus_project_helper.cli:app"
